--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/DatabaseView.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/DatabaseView.fxml
@@ -15,7 +15,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.DatabaseViewController">
    <children>
-      <Label alignment="CENTER" layoutX="1.0" layoutY="28.0" prefHeight="37.0" prefWidth="403.0" text="Names Database">
+      <Label alignment="CENTER" prefHeight="50.0" prefWidth="400.0" styleClass="scene-header" text="Names Database">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
@@ -23,17 +23,17 @@
             <Insets bottom="10.0" />
          </padding>
       </Label>
-      <ListView fx:id="listView" layoutX="34.0" layoutY="149.0" prefHeight="465.0" prefWidth="330.0" />
-      <Button fx:id="addButton" layoutX="224.0" layoutY="633.0" mnemonicParsing="false" onAction="#add" text="Add Recordings">
+      <ListView fx:id="listView" layoutX="36.0" layoutY="155.0" prefHeight="465.0" prefWidth="330.0" />
+      <Button fx:id="addButton" layoutX="218.0" layoutY="641.0" mnemonicParsing="false" onAction="#add" text="Add Recordings">
          <font>
             <Font size="16.0" />
          </font></Button>
-      <Button fx:id="backButton" layoutX="32.0" layoutY="632.0" mnemonicParsing="false" onAction="#back" text="Back">
+      <Button fx:id="backButton" layoutX="36.0" layoutY="641.0" mnemonicParsing="false" onAction="#back" text="Back">
          <font>
             <Font size="16.0" />
          </font></Button>
-      <TextField fx:id="searchField" layoutX="37.0" layoutY="112.0" prefHeight="34.0" prefWidth="327.0" />
-      <Label alignment="CENTER" layoutX="3.0" layoutY="73.0" prefHeight="23.0" prefWidth="389.0" text="Search for names">
+      <TextField fx:id="searchField" layoutX="36.0" layoutY="111.0" prefHeight="34.0" prefWidth="330.0" />
+      <Label alignment="CENTER" layoutX="36.0" layoutY="73.0" prefHeight="23.0" prefWidth="330.0" styleClass="internal-header" text="Search for names">
          <font>
             <Font size="18.0" />
          </font>
