--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/LoopScene.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/LoopScene.fxml
@@ -13,29 +13,29 @@
 
 <AnchorPane prefHeight="350.0" prefWidth="450.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.LoopSceneController">
     <children>
-        <Label alignment="CENTER" layoutX="193.0" layoutY="53.0" prefHeight="26.0" prefWidth="244.0" text="Loop Practice For:">
+        <Label alignment="CENTER" prefHeight="50.0" prefWidth="452.0" styleClass="scene-header" text="Loop Practice ">
             <font>
                 <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <Label fx:id="recordingLabel" alignment="CENTER" layoutX="193.0" layoutY="121.0" prefHeight="23.0" prefWidth="244.0" text="Name goes here">
+        <Label fx:id="recordingLabel" alignment="CENTER" layoutX="226.0" layoutY="116.0" prefHeight="59.0" prefWidth="202.0" styleClass="internal-header" text="Name goes here">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <ListView fx:id="personalList" layoutX="30.0" layoutY="66.0" prefHeight="156.0" prefWidth="174.0" />
+        <ListView fx:id="personalList" layoutX="30.0" layoutY="89.0" prefHeight="133.0" prefWidth="174.0" />
         <ComboBox fx:id="loopCombo" layoutX="30.0" layoutY="251.0" prefHeight="27.0" prefWidth="174.0" />
-        <Label contentDisplay="CENTER" layoutX="30.0" layoutY="222.0" prefHeight="29.0" prefWidth="174.0" text="How many loops?">
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="30.0" layoutY="233.0" prefHeight="18.0" prefWidth="174.0" styleClass="internal-header" text=" How many loops?">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="30.0" layoutY="35.0" prefHeight="17.0" prefWidth="190.0" text="Personal recordings:">
+        <Label alignment="CENTER" layoutX="30.0" layoutY="65.0" prefHeight="18.0" prefWidth="174.0" styleClass="internal-header" text=" Personal recordings:">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
         <Button fx:id="startButton" layoutX="93.0" layoutY="291.0" mnemonicParsing="false" onAction="#playLoop" text="Start" />
-      <Button fx:id="cancelButton" layoutX="284.0" layoutY="291.0" mnemonicParsing="false" onAction="#returnToWorkspace" text="Cancel" />
+      <Button fx:id="cancelButton" layoutX="296.0" layoutY="291.0" mnemonicParsing="false" onAction="#returnToWorkspace" text="Cancel" />
     </children>
 </AnchorPane>
