--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/RecordScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/RecordScreen.fxml
@@ -19,26 +19,20 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.RecordController">
    <top>
-      <HBox alignment="CENTER" prefHeight="20.0" prefWidth="400.0" BorderPane.alignment="CENTER" />
-   </top>
-   <center>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
-            <Label prefHeight="29.0" prefWidth="182.0" text="New Recording">
+            <Label fx:id="instructionLabel" alignment="CENTER" prefHeight="50.0" prefWidth="400.0" styleClass="scene-header" text="Press record to start recording">
                <font>
                   <Font size="24.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
-            </Label>
-            <Label fx:id="instructionLabel" text="Press record to start recording">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin></Label>
+               </font></Label>
+         </children></HBox>
+   </top>
+   <center>
+      <VBox alignment="TOP_CENTER" prefHeight="204.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+         <children>
             <ImageView fitHeight="72.0" fitWidth="105.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Resources/Mic.png" />
+                  <Image url="@../../imageResources/icons8-microphone-filled-100.png" />
                </image>
                <VBox.margin>
                   <Insets top="15.0" />
@@ -57,22 +51,47 @@
                   <HBox alignment="CENTER" prefHeight="85.0" prefWidth="400.0" spacing="20.0">
                      <children>
                         <Button fx:id="redoButton" mnemonicParsing="false" onAction="#redoRecording" text="Redo" />
-                        <Button fx:id="demoButton" mnemonicParsing="false" onAction="#playDemo" text="Play Demo" />
-                        <Button fx:id="playButton" mnemonicParsing="false" onAction="#playRecording" text="Play" />
+                        <Button fx:id="playButton" mnemonicParsing="false" onAction="#playRecording" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button" text="Play">
+                           <graphic>
+                              <ImageView fitHeight="38.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../imageResources/icons8-play-filled-100.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
                         <Button fx:id="keepButton" mnemonicParsing="false" onAction="#keepRecording" text="Keep" />
                      </children>
                   </HBox>
-                  <Button fx:id="recordButton" mnemonicParsing="false" onAction="#record" text="Record" />
-                  <Button fx:id="stopButton" alignment="CENTER" mnemonicParsing="false" onAction="#stopButtonClicked" prefHeight="27.0" prefWidth="60.0" text="Stop" />
+                  <Button fx:id="recordButton" mnemonicParsing="false" onAction="#record" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
+                     <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../imageResources/icons8-record-100.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="stopButton" alignment="CENTER" mnemonicParsing="false" onAction="#stopButtonClicked" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
+                     <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../imageResources/icons8-stop-filled-100.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
                </children>
             </StackPane>
+            <Button fx:id="demoButton" mnemonicParsing="false" onAction="#playDemo" text="Play Demo" />
          </children>
+         <BorderPane.margin>
+            <Insets top="15.0" />
+         </BorderPane.margin>
       </VBox>
    </center>
    <bottom>
       <HBox alignment="BOTTOM_LEFT" prefHeight="37.0" prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnToWorkspace" text="Return">
+            <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnToWorkspace" text="Back">
                <HBox.margin>
                   <Insets bottom="15.0" left="15.0" />
                </HBox.margin>
