--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/DatabaseView.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/DatabaseView.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.DatabaseViewController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.DatabaseViewController">
    <children>
       <Label alignment="CENTER" prefHeight="50.0" prefWidth="400.0" styleClass="scene-header" text="Names Database">
          <font>
@@ -33,7 +28,7 @@
             <Font size="16.0" />
          </font></Button>
       <TextField fx:id="searchField" layoutX="36.0" layoutY="111.0" prefHeight="34.0" prefWidth="330.0" />
-      <Label alignment="CENTER" layoutX="36.0" layoutY="73.0" prefHeight="23.0" prefWidth="330.0" styleClass="internal-header" text="Search for names">
+      <Label alignment="CENTER" layoutX="36.0" layoutY="73.0" prefHeight="23.0" prefWidth="330.0" styleClass="blue-label" text="Search for names">
          <font>
             <Font size="18.0" />
          </font>
