--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/LoopScene.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/LoopScene.fxml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -11,26 +7,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="350.0" prefWidth="450.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.LoopSceneController">
+<AnchorPane prefHeight="350.0" prefWidth="450.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.LoopSceneController">
     <children>
         <Label alignment="CENTER" prefHeight="50.0" prefWidth="452.0" styleClass="scene-header" text="Loop Practice ">
             <font>
                 <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <Label fx:id="recordingLabel" alignment="CENTER" layoutX="226.0" layoutY="116.0" prefHeight="59.0" prefWidth="202.0" styleClass="internal-header" text="Name goes here">
+        <Label fx:id="recordingLabel" alignment="CENTER" layoutX="226.0" layoutY="116.0" prefHeight="59.0" prefWidth="202.0" styleClass="blue-label" text="Name goes here">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
         <ListView fx:id="personalList" layoutX="30.0" layoutY="89.0" prefHeight="133.0" prefWidth="174.0" />
         <ComboBox fx:id="loopCombo" layoutX="30.0" layoutY="251.0" prefHeight="27.0" prefWidth="174.0" />
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="30.0" layoutY="233.0" prefHeight="18.0" prefWidth="174.0" styleClass="internal-header" text=" How many loops?">
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="30.0" layoutY="233.0" prefHeight="18.0" prefWidth="174.0" styleClass="blue-label" text=" How many loops?">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label alignment="CENTER" layoutX="30.0" layoutY="65.0" prefHeight="18.0" prefWidth="174.0" styleClass="internal-header" text=" Personal recordings:">
+        <Label alignment="CENTER" layoutX="30.0" layoutY="65.0" prefHeight="18.0" prefWidth="174.0" styleClass="blue-label" text=" Personal recordings:">
             <font>
                 <Font size="14.0" />
             </font>
