--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/PlaylistCreator.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/PlaylistCreator.fxml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.PlaylistCreatorController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.PlaylistCreatorController">
    <children>
       <Label alignment="CENTER" layoutY="-1.0" prefHeight="100.0" prefWidth="900.0" styleClass="scene-header" text="Select Names">
          <font>
@@ -45,7 +41,7 @@
          <font>
             <Font size="16.0" />
          </font></Button>
-      <CheckBox fx:id="randomiseBox" layoutX="570.0" layoutY="512.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="175.0" styleClass="internal-header" text="Randomise Order">
+      <CheckBox fx:id="randomiseBox" layoutX="570.0" layoutY="512.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="175.0" styleClass="blue-label" text="Randomise Order">
          <font>
             <Font size="16.0" />
          </font></CheckBox>
