--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/PlaylistScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/PlaylistScreen.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -16,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-border-image-width: 10;" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.PlaylistController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-border-image-width: 10;" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.PlaylistController">
    <children>
       <Button fx:id="practiceButton" layoutX="601.0" layoutY="126.0" mnemonicParsing="false" onAction="#practiceButtonClicked" prefHeight="46.0" prefWidth="119.0" text="New Playlist">
          <font>
@@ -28,14 +23,14 @@
             <Font size="16.0" />
          </font>
       </Button>
-      <Pane layoutX="49.0" layoutY="126.0" prefHeight="46.0" prefWidth="526.0" styleClass="internal-header">
+      <Pane layoutX="49.0" layoutY="126.0" prefHeight="46.0" prefWidth="250.0" styleClass="internal-header">
          <children>
-            <CheckBox fx:id="randomiseBox" layoutX="283.0" layoutY="11.0" mnemonicParsing="false" text="Randomise Order">
+            <CheckBox fx:id="randomiseBox" layoutX="283.0" layoutY="11.0" mnemonicParsing="false" styleClass="blue-label" text="Randomise Order" textFill="#464646">
                <font>
                   <Font size="16.0" />
                </font>
             </CheckBox>
-            <Label layoutX="9.0" layoutY="8.0" prefHeight="28.0" prefWidth="314.0" text="Current playlists:">
+            <Label layoutX="9.0" layoutY="8.0" prefHeight="28.0" prefWidth="314.0" text="Current playlists:" textFill="#464646">
                <font>
                   <Font size="20.0" />
                </font>
