--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/RateScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/RateScreen.fxml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="250.0" prefWidth="350.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.RateScreenController">
+<AnchorPane prefHeight="250.0" prefWidth="350.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.RateScreenController">
    <children>
       <VBox alignment="TOP_CENTER" prefHeight="300.0" prefWidth="400.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -25,10 +21,10 @@
                   <Insets />
                </VBox.margin>
             </Label>
-            <Pane prefHeight="56.0" prefWidth="319.0" styleClass="internal-header">
+            <Pane prefHeight="56.0" prefWidth="319.0">
                <children>
-                  <Label alignment="CENTER" layoutX="26.0" layoutY="3.0" prefHeight="22.0" prefWidth="248.0" text="How would you rate this recording?" />
-                  <Label layoutX="16.0" layoutY="33.0" text="This rating only applies for demo recordings" />
+                  <Label alignment="CENTER" layoutX="27.0" layoutY="14.0" prefHeight="22.0" prefWidth="248.0" styleClass="blue-label" text="How would you rate this recording?" />
+                  <Label layoutX="16.0" layoutY="33.0" styleClass="blue-label" text="This rating only applies for demo recordings" />
                </children>
                <VBox.margin>
                   <Insets left="15.0" right="15.0" />
