--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/RecordScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/RecordScreen.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -17,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.RecordController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.RecordController">
    <top>
       <HBox alignment="CENTER" prefHeight="50.0" prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
@@ -51,7 +45,7 @@
                   <HBox alignment="CENTER" prefHeight="85.0" prefWidth="400.0" spacing="20.0">
                      <children>
                         <Button fx:id="redoButton" mnemonicParsing="false" onAction="#redoRecording" text="Redo" />
-                        <Button fx:id="playButton" mnemonicParsing="false" onAction="#playRecording" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button" text="Play">
+                        <Button fx:id="playButton" mnemonicParsing="false" onAction="#playRecording" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
                            <graphic>
                               <ImageView fitHeight="38.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -62,15 +56,6 @@
                         <Button fx:id="keepButton" mnemonicParsing="false" onAction="#keepRecording" text="Keep" />
                      </children>
                   </HBox>
-                  <Button fx:id="recordButton" mnemonicParsing="false" onAction="#record" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
-                     <graphic>
-                        <ImageView fitHeight="38.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../imageResources/icons8-record-100.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
                   <Button fx:id="stopButton" alignment="CENTER" mnemonicParsing="false" onAction="#stopButtonClicked" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
                      <graphic>
                         <ImageView fitHeight="38.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
@@ -78,7 +63,17 @@
                               <Image url="@../../imageResources/icons8-stop-filled-100.png" />
                            </image>
                         </ImageView>
-                     </graphic></Button>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="recordButton" mnemonicParsing="false" onAction="#record" prefHeight="50.0" prefWidth="50.0" styleClass="icon-button">
+                     <graphic>
+                        <ImageView fitHeight="39.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../imageResources/icons8-record-100.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
             </StackPane>
             <Button fx:id="demoButton" mnemonicParsing="false" onAction="#playDemo" text="Play Demo" />
