--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/UploadScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/UploadScreen.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -16,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.UploadController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.UploadController">
    <children>
       <VBox alignment="CENTER" layoutX="508.0" layoutY="118.0" prefHeight="480.0" prefWidth="353.0" spacing="10.0">
          <children>
@@ -37,7 +32,7 @@
                         <Font size="16.0" />
                      </font>
                   </Button>
-                  <CheckBox fx:id="randomiseBox" mnemonicParsing="false" prefHeight="22.0" prefWidth="177.0" styleClass="internal-header" text="Randomise Order">
+                  <CheckBox fx:id="randomiseBox" mnemonicParsing="false" prefHeight="22.0" prefWidth="177.0" styleClass="blue-label" text="Randomise Order">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -59,7 +54,7 @@
                   <Insets top="15.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="33.0" prefWidth="116.0" styleClass="internal-header" text=" Select file:">
+            <Label alignment="CENTER" prefHeight="33.0" prefWidth="159.0" styleClass="internal-header" text=" Select file:">
                <VBox.margin>
                   <Insets bottom="5.0" top="30.0" />
                </VBox.margin>
