--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/UploadWarning.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/UploadWarning.fxml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.UploadWarningController">
+<AnchorPane prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.UploadWarningController">
    <children>
       <BorderPane layoutX="67.0" layoutY="42.0" prefHeight="350.0" prefWidth="300.0" stylesheets="@../../css/default.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
                <children>
-                  <Pane prefHeight="31.0" prefWidth="300.0" styleClass="internal-header">
+                  <Pane prefHeight="31.0" prefWidth="300.0">
                      <children>
-                        <Label layoutY="7.0" prefHeight="15.0" prefWidth="300.0" text=" The following names could not be generated" />
+                        <Label layoutY="7.0" prefHeight="15.0" prefWidth="300.0" styleClass="blue-label" text=" The following names could not be generated" />
                      </children>
                      <VBox.margin>
                         <Insets left="25.0" right="25.0" />
