--- a/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/Workspace.fxml
+++ b/AnotherDuplicatelol/src/namesayer/fxmlControllers/fxmlFiles/Workspace.fxml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -23,13 +16,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.WorkspaceController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@../../css/default.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.fxmlControllers.WorkspaceController">
    <children>
       <Pane layoutX="-6.0" prefHeight="600.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <VBox alignment="TOP_CENTER" layoutX="443.0" layoutY="137.0" prefHeight="434.0" prefWidth="400.0" spacing="15.0">
                <children>
-                  <Pane prefHeight="335.0" prefWidth="400.0" styleClass="internal-header">
+                  <Pane prefHeight="345.0" prefWidth="400.0" styleClass="internal-header">
                      <children>
                         <Label fx:id="recordingNameLabel" alignment="CENTER" layoutY="48.0" prefHeight="104.0" prefWidth="400.0" text="Placeholder">
                            <font>
@@ -40,6 +33,9 @@
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
+                           <padding>
+                              <Insets top="15.0" />
+                           </padding>
                         </Label>
                         <Label fx:id="ratingLabel" alignment="CENTER" layoutY="154.0" prefHeight="32.0" prefWidth="400.0" text="Placeholder">
                            <font>
